# quiz-studio-backend

./: README.md  agents_service.py  bash.exe.stackdump  custom_agents.py  gemini_model.py  helper.py  instructions.py  main.py  mcp_client.py  models.py  openai_sessions_service.py  prune_serpapi_reponse.py  prune_serpapi_response.py  pymongo_get_database.py  pyproject.toml  test_mongo_connection.py  test_signup.py  tools.py  utils.py
