[project]
name = "ai-quiz-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "openai-agents>=0.2.9",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.11.7",
    "pymongo[srv]>=4.15.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
]
